[package]
name = "innocence_keeper"
version = "0.0.1-alpha3"
edition = "2021"
description = "This tool removes objects from the file system rather than sending them to the recycle bin. However, for legal compliance reasons, it does not overwrite the disk, so there is still a possibility of data recovery."
license = "MIT"
repository = "https://github.com/kingwingfly/InnocenceKeeper"
documentation = "https://docs.rs/innocence_keeper"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
clap_complete = { version = "4.5.1" }
dialoguer = { version = "0.11" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
dirs-next = "2.0.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
